Fix arthur's picture. Fix FAQ alignment. Fix apply now caps. Remove placeholder text. Login-form is no longer sticky

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -2,6 +2,10 @@
   float: right;
   margin-top: 30px;
 }
+@media (max-width: 672px) {
+  .login .button {
+    padding: 4px 15px;
+  } }
 
 
 .scrolling-header{
