--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1680,8 +1680,7 @@ a {
     padding: 4px 10px;
     margin-top: 30px;
     text-align: center;
-    font-size: 1em;
-    text-transform: uppercase; }
+    font-size: 1em;}
     @media (min-width: 672px) {
       .button.cta {
         width: 275px;
@@ -1996,6 +1995,7 @@ footer {
             float: left; } }
 
 .login {
+  text-shadow: 1px 1px #000;
   .button{
     margin-top: 50px; }
   float: right;
@@ -2149,14 +2149,6 @@ footer {
     font-size: 1em; }
     .form .cancel:hover {
       background: #2b2b2b; }
-
-.login-form {
-  position: fixed;
-  right: 260px;
-  top: 79px;
-  z-index: 99;
-  background-color: rgba(0, 0, 0, 0.5);
-}
 
 .mission {
   background: white; }
